--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,6 @@
+/* @import 'bootstrap/dist/css/bootstrap.css'; */
+
+/* your other global styles */
 :root {
   --background: #ffffff;
   --foreground: #171717;
